<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gordaco</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gordaco"><u>Gordaco</u></string>
    <string name="boton1">Entrenamiento</string>
    <string name="boton2">Ejercicios</string>
    <string name="boton3">Pérdida de peso</string>
    <string name="acercade"><u>Acerca de Gordaco</u></string>
    <string name="nom">Nombre</string>
    <string name="ayuda"><u>Ayuda</u></string>
    <string name="nuevo">Nueva entrada</string>
    <string name="aceptar">Aceptar</string>
    <string name="atras">Atrás</string>
    <string name="entrenam"><u>Entrenamiento</u></string>

    <string-array name="Entrenamientos">
        <item>Entrenamiento 1</item>
        <item>Entrenamiento 2</item>
        <item>Entrenamiento 3</item>
    </string-array>

    <string name="n_entren"><u>Nuevo Entrenamiento</u></string>

    <string-array name="Zonas">
        <item>Brazo</item>
        <item>Pecho</item>
        <item>Espalda</item>
        <item>Pierna</item>
        <item>Abdominales</item>
    </string-array>
    <string-array name="Ejs">
        <item>Ej 1</item>
        <item>Ej 2</item>
        <item>Ej 3</item>
    </string-array>

    <string name="entren_prompt">Seleccione entrenamiento</string>
    <string name="editar">Editar</string>
    <string name="dialog_title">Borrar</string>
    <string name="consultar">Consultar</string>
    <string name="email">Enviar por email</string> 
	<string name="ent_bor">Entrenamiento borrado</string>
	<string name="hist_bor">Historial Borrado</string>
    <string name="dialog_message">¿Seguro que quieres borrarlo?</string>
    <string name="borrar">Borrar</string>
    <string name="editar2"><u>Editar</u></string>
    <string name="salir">Salir</string>
    <string name="guardar">Guardar</string>
    <string name="anadir">Añadir/Editar</string>
    <string name="entren_n"><u>Entrenamiento n</u></string>
    <string name="info">Aplicación desarrollada por Jesús Alberto Hernández y Julio Alberto Seijas</string>
    <string name="version">Versión 1.0</string>
    <string name="infoayuda">Aplicación para hacer ejercicio y perder peso. Se puede consultar tablas de entrenamiento, editar las existentes, crear nuevas, consultar ejercicios concretos y seguir la evolución de nuestro peso.</string>
    <string name="perdida"><u>Pérdida de peso</u></string>
    <string name="historial">Ver/Editar historial</string>
    <string name="historial2"><u>Historial</u></string>
    <string name="bor_historial">Borrar historial</string>
    <string name="ejercicios"><u>Ejercicios</u></string>
    <string name="ejercicios2"><u>Ejercicios 2</u></string>
    <string name="ejercicio"><u>Ejercicio</u></string>
    <string name="title_activity_entrenamientos">Entrenamientos</string>
    <string name="title_activity_ejercicios">Ejercicios</string>
    <string name="title_activity_peso">Peso</string>
    <string name="title_activity_historial">Historial</string>
    <string name="title_activity_entrenamiento">Entrenamiento</string>
    <string name="title_activity_acercade">Acercade</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="title_activity_ejercicios2">Ejercicios2</string>
    <string name="title_activity_ejercicio">Ejercicio</string>
    <string name="title_activity_consulta">Consulta</string>
    <string name="title_activity_editar">Editar</string>

</resources>