<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Negro"
    android:clipToPadding="false"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
   
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:text="@string/ejercicios"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Blanco"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <Spinner
            android:id="@+id/spinner2"
            android:drawSelectorOnTop = "true"
            android:layout_width="match_parent"
			android:prompt = "@string/entren_prompt"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="201dp"
            android:layout_height="136dp"
            android:src="@drawable/ejs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="_atras"
                android:text="@string/atras" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="_ejercicio"
                android:text="@string/aceptar" />

        </LinearLayout>
        
</LinearLayout>